--- a/CONTAINERCICLOUD/talend.project
+++ b/CONTAINERCICLOUD/talend.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:TalendProperties="http://www.talend.org/properties">
-  <TalendProperties:Project xmi:id="_7PhJMeOvEe2WZuNJPhHTdw" label="containercicloud" language="java" technicalLabel="CONTAINERCICLOUD" author="_7PhJMuOvEe2WZuNJPhHTdw" productVersion="Talend Cloud API Services Platform-8.0.1.20220412_1227-patch" url="{&quot;commitLogPattern&quot;:&quot;{0}&quot;,&quot;location&quot;:&quot;https://github.com/ALJEBORI/CICD_Training2.git&quot;,&quot;settings&quot;:&quot;000&quot;,&quot;storage&quot;:&quot;git&quot;}" type="DQ" bigData="false">
+  <TalendProperties:Project xmi:id="_7PhJMeOvEe2WZuNJPhHTdw" label="containercicloud" language="java" technicalLabel="CONTAINERCICLOUD" author="_7PhJMuOvEe2WZuNJPhHTdw" productVersion="Talend Cloud API Services Platform-8.0.1.20220412_1227-patch" url="{&quot;commitLogPattern&quot;:&quot;{0}&quot;,&quot;location&quot;:&quot;https://github.com/ALJEBORI/CICD_Training2.git&quot;,&quot;settings&quot;:&quot;000&quot;,&quot;storage&quot;:&quot;git&quot;}" type="DQ" itemsRelationVersion="1.3" bigData="false">
     <migrationTask xmi:id="_7RAW8OOvEe2WZuNJPhHTdw" id="org.talend.repository.model.migration.CheckProductVersionMigrationTask" breaks="7.1.0" version="7.1.1"/>
   </TalendProperties:Project>
   <TalendProperties:User xmi:id="_7PhJMuOvEe2WZuNJPhHTdw" login="moh_aljebori@trial44008.us.talend.com" firstName="Mohammed" lastName="ALJEBORI" type="DQ"/>
